Fixed two slides not showing up at the same time

--- a/static/css/totoro.css
+++ b/static/css/totoro.css
@@ -121,7 +121,8 @@ body {font-family: Verdana,sans-serif;margin:0}
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   transform: translateY(-50%);
-  background-color: #57adad42;
+  background-color: rebeccapurple;
+    /*#57adad42;*/
 }
 
 /* Position the "next button" to the right */
